--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "devDependencies": {
         "@nuxt/devtools": "latest",
-        "@types/node": "^20.4.2",
+        "@types/node": "20.4.2",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "eslint": "^8.45.0",
