--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "devDependencies": {
         "@nuxt/devtools": "latest",
         "@types/node": "20.4.2",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
+        "@typescript-eslint/eslint-plugin": "6.1.0",
+        "@typescript-eslint/parser": "6.1.0",
         "eslint": "^8.45.0",
         "eslint-plugin-vue": "^9.15.1",
         "husky": "^8.0.3",
