--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     },
     "dependencies": {
         "@nuxtjs/google-fonts": "3.0.2",
-        "@nuxtjs/tailwindcss": "^6.8.0"
+        "@nuxtjs/tailwindcss": "6.8.0"
     }
 }
